--- a/Pre-processing_models.ipynb
+++ b/Pre-processing_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -13,8 +13,17 @@
     "import random\n",
     "\n",
     "NUM_TRAINING_EXAMPLES = 5172\n",
-    "NUM_TEST_EXAMPLES = 5857\n",
-    "\n",
+    "NUM_TEST_EXAMPLES = 5857"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def load_dataset():\n",
     "    data = scipy.io.loadmat('./data/spam_data.mat')\n",
     "\n",
@@ -34,8 +43,17 @@
     "    y = 1\n",
     "    y_test = 1\n",
     "\n",
-    "    return X, y, X_test, y_test, X_kaggle\n",
-    "\n",
+    "    return X, y, X_test, y_test, X_kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "if __name__ == \"__main__\":\n",
     "\n",
     "    #==== Read data ====\n",
@@ -49,9 +67,17 @@
     "\n",
     "    #==== Print accuracy ====\n",
     "\n",
-    "    #==== Predict on testing set and generate CSV file====\n",
-    "\n"
+    "    #==== Predict on testing set and generate CSV file===="
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
